--- a/myapplication/src/main/res/navigation/mobile_navigation.xml
+++ b/myapplication/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,11 @@
         android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+
+    <fragment
+        android:id="@+id/navigation_musclechart"
+        android:name="com.example.myapplication.ui.musclechart.MuscleChartFragment"
+        android:label="@string/title_musclechart"
+        tools:layout="@layout/fragment_notifications" />
+
 </navigation>
