--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -3,21 +3,21 @@
 
     <item
         android:id="@+id/dashboard"
-        android:title="Dashboard"
-        android:icon="@drawable/ic_dashboard"/>
+        android:title="Home"
+        android:icon="@drawable/ic_baseline_home_24"/>
     <item
         android:id="@+id/muscle_chart"
-        android:title="Search"
-        android:icon="@drawable/ic_search"/>
+        android:title="Muscle Chart"
+        android:icon="@drawable/ic_bicep"/>
 
     <item
         android:id="@+id/workout"
-        android:title="Workouts"
-        android:icon="@drawable/ic_workout"/>
+        android:title="My Workouts"
+        android:icon="@drawable/ic_baseline_fitness_center_24"/>
 
     <item
         android:id="@+id/stats"
-        android:title="Statistics"
-        android:icon="@drawable/ic_stats"/>
+        android:title="My Profile"
+        android:icon="@drawable/ic_baseline_person_24"/>
 
 </menu>
