--- a/app/src/main/res/layout/fragment_muscle_chart.xml
+++ b/app/src/main/res/layout/fragment_muscle_chart.xml
@@ -9,8 +9,15 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="Muscle Chart Fragment"
-        android:textSize="25sp"
-        android:layout_gravity="center"/>
+        android:textSize="25sp" />
+
+    <Button
+        android:id="@+id/muscle_search_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Muscle Search" />
 
 </FrameLayout>
