--- a/app/src/main/res/layout/fragment_muscle_chart.xml
+++ b/app/src/main/res/layout/fragment_muscle_chart.xml
@@ -13,4 +13,12 @@
         android:textSize="25sp"
         android:layout_gravity="center"/>
 
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="110dp"
+        android:layout_height="49dp"
+        android:text="Switch"
+        android:showText="false"
+        />
+
 </FrameLayout>
