--- a/app/src/main/res/layout/fragment_muscle_chart.xml
+++ b/app/src/main/res/layout/fragment_muscle_chart.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.MuscleChartFragment">
+    tools:context=".fragments.main.MuscleChartFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -20,4 +20,4 @@
         android:layout_gravity="center"
         android:text="Muscle Search" />
 
-</FrameLayout>
+</LinearLayout>
