--- a/app/src/main/res/layout/fragment_muscle_chart.xml
+++ b/app/src/main/res/layout/fragment_muscle_chart.xml
@@ -12,25 +12,30 @@
 
         <ImageView
             android:id="@+id/imageFront"
-            android:layout_width="match_parent"
-            android:layout_height="636dp"
-            android:background="@color/white"
+            android:layout_width="411dp"
+            android:layout_height="600dp"
+            android:background="@color/black"
+            android:contentDescription="@string/frImageDesc"
             android:src="@drawable/muscle_front"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:layout_constraintTop_toTopOf="parent"
-            tools:visibility="visible"
-            android:contentDescription="@string/frImageDesc" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:visibility="visible" />
 
         <ImageView
             android:id="@+id/imageBack"
-            android:layout_width="match_parent"
-            android:layout_height="636dp"
-            android:background="@color/white"
+            android:layout_width="411dp"
+            android:layout_height="600dp"
+            android:background="@color/black"
+            android:contentDescription="@string/bImageDesc"
             android:src="@drawable/muscle_back"
             android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:visibility="invisible"
-            android:contentDescription="@string/bImageDesc" />
+            tools:visibility="invisible" />
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/chartFlipper"
@@ -51,12 +56,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/switchLabel1"
-            android:visibility="visible"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/chartFlipper"
             app:layout_constraintEnd_toStartOf="@+id/chartFlipper"
-            app:layout_constraintTop_toBottomOf="@+id/imageFront"
-            tools:textSize="20sp"
-            tools:visibility="visible" />
+            app:layout_constraintTop_toBottomOf="@+id/imageFront" />
 
         <TextView
             android:id="@+id/textBack"
