--- a/app/src/main/res/layout/fragment_muscle_chart.xml
+++ b/app/src/main/res/layout/fragment_muscle_chart.xml
@@ -10,6 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <Button
+            android:id="@+id/muscle_search_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Search"/>
+
         <ImageView
             android:id="@+id/imageFront"
             android:layout_width="411dp"
