--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -1,16 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.main.WorkoutFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <!--<ImageButton
+        android:id="@+id/add_plan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Workout Fragment"
-        android:textSize="25sp"
-        android:layout_gravity="center"/>
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/round_transparent_button"
+        android:src="@drawable/ic_add_48"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />-->
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/tv_workout_plan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:text="Add New Workout Plan"
+        android:textSize="18sp"
+        android:layout_toRightOf="@id/btn_create_plan"/>
+
+    <Button
+        android:id="@+id/btn_create_plan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="New"/>
+
+    <ListView
+        android:id="@+id/gv_plans"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:scrollbarSize="8sp"
+        android:layout_below="@id/btn_create_plan"
+        android:padding="8sp"/>
+
+</RelativeLayout>
