--- a/app/src/main/res/layout/fragment_workout_edit.xml
+++ b/app/src/main/res/layout/fragment_workout_edit.xml
@@ -24,6 +24,15 @@
         android:textSize="18sp"
         android:layout_toRightOf="@id/btn_add_new_exercise"/>
 
+    <Button
+        android:id="@+id/btn_delete_workout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Delete"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
