--- a/app/src/main/res/layout/fragment_muscle_chart.xml
+++ b/app/src/main/res/layout/fragment_muscle_chart.xml
@@ -88,7 +88,7 @@
             android:layout_marginStart="97dp"
             android:layout_marginTop="85dp"
             android:rotation="50"
-            android:text="Shoulder"
+            android:text="Front Delts"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -99,7 +99,7 @@
             android:layout_marginTop="85dp"
             android:layout_marginEnd="97dp"
             android:rotation="-50"
-            android:text="ShoulderBack"
+            android:text="Rear Delts"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -170,12 +170,12 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
-            android:id="@+id/DeltButton"
+            android:id="@+id/TrapButton"
             android:layout_width="38dp"
             android:layout_height="44dp"
             android:layout_marginTop="76dp"
             android:layout_marginEnd="140dp"
-            android:text="Delt"
+            android:text="Traps"
             app:layout_constraintEnd_toEndOf="@+id/imageView2"
             app:layout_constraintTop_toTopOf="parent" />
 
