--- a/app/src/main/res/layout/fragment_workout_list.xml
+++ b/app/src/main/res/layout/fragment_workout_list.xml
@@ -16,15 +16,22 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <Button
+                android:id="@+id/btn_set_active"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="Set Active" />
+
             <EditText
                 android:id="@+id/et_rename"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="text"
-                android:layout_centerInParent="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="8dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/btn_set_active"
+                android:layout_marginTop="-8dp"
                 android:text="Name" />
 
             <Button
