--- a/app/src/main/res/layout/fragment_muscle_chart.xml
+++ b/app/src/main/res/layout/fragment_muscle_chart.xml
@@ -22,8 +22,8 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="190dp"
-            android:layout_height="580dp"
+            android:layout_width="197dp"
+            android:layout_height="655dp"
             android:contentDescription="@string/frImageDesc"
             android:src="@drawable/muscle_front_half"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,8 +31,8 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="190dp"
-            android:layout_height="580dp"
+            android:layout_width="197dp"
+            android:layout_height="655dp"
             android:contentDescription="@string/bImageDesc"
             android:src="@drawable/muscle_back_half"
             app:layout_constraintEnd_toEndOf="parent"
@@ -75,9 +75,11 @@
             android:id="@+id/PecButton"
             android:layout_width="46dp"
             android:layout_height="53dp"
-            android:layout_marginStart="130dp"
-            android:layout_marginTop="110dp"
+            android:layout_marginStart="138dp"
+            android:layout_marginTop="130dp"
+            android:background="#00FF0000"
             android:text="Pec"
+            android:textColor="#00FF0000"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -85,10 +87,12 @@
             android:id="@+id/FShoulderButton"
             android:layout_width="25dp"
             android:layout_height="67dp"
-            android:layout_marginStart="97dp"
-            android:layout_marginTop="85dp"
+            android:layout_marginStart="110dp"
+            android:layout_marginTop="98dp"
+            android:background="#00FF0000"
             android:rotation="50"
             android:text="Front Delts"
+            android:textColor="#00FF0000"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -96,10 +100,12 @@
             android:id="@+id/BShoulderButton"
             android:layout_width="25dp"
             android:layout_height="67dp"
-            android:layout_marginTop="85dp"
-            android:layout_marginEnd="97dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginEnd="110dp"
+            android:background="#00FF0000"
             android:rotation="-50"
             android:text="Rear Delts"
+            android:textColor="#00FF0000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -108,9 +114,11 @@
             android:layout_width="65dp"
             android:layout_height="32dp"
             android:layout_marginStart="62dp"
-            android:layout_marginTop="155dp"
+            android:layout_marginTop="180dp"
+            android:background="#00FF0000"
             android:rotation="-50"
             android:text="Bicep"
+            android:textColor="#00FF0000"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/imageView" />
 
@@ -119,20 +127,24 @@
             android:layout_width="61dp"
             android:layout_height="32dp"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="210dp"
+            android:layout_marginTop="235dp"
+            android:background="#00FF0000"
             android:rotation="-60"
             android:text="ForearmFront"
+            android:textColor="#00FF0000"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/AbsButton"
-            android:layout_width="91dp"
-            android:layout_height="33dp"
-            android:layout_marginStart="120dp"
-            android:layout_marginTop="195dp"
+            android:layout_width="100dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="130dp"
+            android:layout_marginTop="220dp"
+            android:background="#00FF0000"
             android:rotation="90"
             android:text="abs"
+            android:textColor="#00FF0000"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -140,10 +152,12 @@
             android:id="@+id/ObliqueButton"
             android:layout_width="91dp"
             android:layout_height="33dp"
-            android:layout_marginStart="87dp"
-            android:layout_marginTop="190dp"
+            android:layout_marginStart="95dp"
+            android:layout_marginTop="220dp"
+            android:background="#00FF0000"
             android:rotation="90"
             android:text="Oblique"
+            android:textColor="#00FF0000"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -151,10 +165,12 @@
             android:id="@+id/QuadButton"
             android:layout_width="32dp"
             android:layout_height="118dp"
-            android:layout_marginStart="116dp"
-            android:layout_marginBottom="176dp"
+            android:layout_marginStart="128dp"
+            android:layout_marginBottom="200dp"
+            android:background="#00FF0000"
             android:rotation="-10"
             android:text="Quad"
+            android:textColor="#00FF0000"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -162,10 +178,12 @@
             android:id="@+id/GroinButton"
             android:layout_width="23dp"
             android:layout_height="77dp"
-            android:layout_marginStart="148dp"
-            android:layout_marginBottom="236dp"
+            android:layout_marginStart="160dp"
+            android:layout_marginBottom="258dp"
+            android:background="#00FF0000"
             android:rotation="-10"
             android:text="Groin"
+            android:textColor="#00FF0000"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -173,20 +191,24 @@
             android:id="@+id/TrapButton"
             android:layout_width="38dp"
             android:layout_height="44dp"
-            android:layout_marginTop="76dp"
-            android:layout_marginEnd="140dp"
+            android:layout_marginTop="85dp"
+            android:layout_marginEnd="150dp"
+            android:background="#00FF0000"
             android:text="Traps"
+            android:textColor="#00FF0000"
             app:layout_constraintEnd_toEndOf="@+id/imageView2"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/TricepButton"
-            android:layout_width="33dp"
-            android:layout_height="76dp"
-            android:layout_marginTop="138dp"
+            android:layout_width="40dp"
+            android:layout_height="68dp"
+            android:layout_marginTop="155dp"
             android:layout_marginEnd="70dp"
-            android:rotation="-30"
+            android:background="#00FF0000"
+            android:rotation="-25"
             android:text="Tricep"
+            android:textColor="#00FF0000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -194,10 +216,12 @@
             android:id="@+id/BForearmButton"
             android:layout_width="25dp"
             android:layout_height="74dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="310dp"
+            android:layout_marginEnd="42dp"
+            android:layout_marginBottom="363dp"
+            android:background="#00FF0000"
             android:rotation="-30"
             android:text="ForearmBack"
+            android:textColor="#00FF0000"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -205,19 +229,23 @@
             android:id="@+id/ScapButton"
             android:layout_width="23dp"
             android:layout_height="75dp"
-            android:layout_marginTop="110dp"
-            android:layout_marginEnd="150dp"
+            android:layout_marginTop="130dp"
+            android:layout_marginEnd="170dp"
+            android:background="#00FF0000"
             android:text="Scap"
+            android:textColor="#00FF0000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/LatButton"
-            android:layout_width="35dp"
-            android:layout_height="104dp"
-            android:layout_marginTop="130dp"
-            android:layout_marginEnd="115dp"
+            android:layout_width="44dp"
+            android:layout_height="122dp"
+            android:layout_marginTop="150dp"
+            android:layout_marginEnd="123dp"
+            android:background="#00FF0000"
             android:text="Lat"
+            android:textColor="#00FF0000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -225,9 +253,11 @@
             android:id="@+id/GluteButton"
             android:layout_width="48dp"
             android:layout_height="65dp"
-            android:layout_marginTop="245dp"
-            android:layout_marginEnd="125dp"
+            android:layout_marginTop="280dp"
+            android:layout_marginEnd="138dp"
+            android:background="#00FF0000"
             android:text="Glute"
+            android:textColor="#00FF0000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -235,86 +265,25 @@
             android:id="@+id/HamstringButton"
             android:layout_width="58dp"
             android:layout_height="96dp"
-            android:layout_marginEnd="110dp"
-            android:layout_marginBottom="180dp"
+            android:layout_marginEnd="120dp"
+            android:layout_marginBottom="210dp"
+            android:background="#00FF0000"
             android:text="Hamstring"
+            android:textColor="#00FF0000"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
             android:id="@+id/CalfButton"
-            android:layout_width="46dp"
-            android:layout_height="74dp"
+            android:layout_width="56dp"
+            android:layout_height="91dp"
             android:layout_marginEnd="105dp"
             android:layout_marginBottom="80dp"
+            android:background="#00FF0000"
             android:text="Calf"
+            android:textColor="#00FF0000"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
             app:layout_constraintEnd_toEndOf="parent" />
-
-        <TextView
-            android:id="@+id/textMuscleName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="MuscleName"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-        <TextView
-            android:id="@+id/textScientificMuscleName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="Scientific Muscle Name"
-            app:layout_constraintStart_toStartOf="@+id/textMuscleName"
-            app:layout_constraintTop_toBottomOf="@+id/textMuscleName" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="110dp"
-            android:text="TextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:text="TextView"
-            app:layout_constraintStart_toEndOf="@+id/textView5"
-            app:layout_constraintTop_toTopOf="@+id/textView5" />
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:text="TextView"
-            app:layout_constraintEnd_toEndOf="@+id/textView5"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:text="TextView"
-            app:layout_constraintStart_toStartOf="@+id/textView6"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Exercises for Muscle:"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="@+id/textView6"
-            app:layout_constraintStart_toStartOf="@+id/textView5"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
